Added the ability to loop SFX.
SFX can now be looped when called using SoundManager playSFX() function and stopped with stopSFX() function.